--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,21 @@
 *.a
 *.lib
 
+
+# CMake gitignore
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+
 # Executables
 *.exe
 *.out
